--- a/src/Assignment1/main.html
+++ b/src/Assignment1/main.html
@@ -13,7 +13,8 @@
             <a class="navItem" href='#' onclick="navigate(false)">Cards</a>
         </div>
         <div id="main-page" class="paper">
-            Hey guys, my name is Truman and this is my very first project for CPSC455. Here, I am going to do a very simple card storage web app with a little twist in it!
+            Hey guys, my name is Truman and this is my very first project for CPSC455. Here, I am going to do a very
+            simple card storage web app with a little twist in it!
             Hope you guys enjoy my little invention.
         </div>
         <div id="card-page" class="paper">
@@ -25,8 +26,18 @@
                 <label for="description">Description</label><br>
                 <input type="text" id="description" name="description"> <br><br>
                 <input type="reset" value="Clear">
-                <button type="submit" onclick="addToList()">Submit</button>
-              </form>
+                <button type="button" onclick="addToList()">Submit</button>
+            </form>
+            <table id="card-list" border="3">
+                <thead>
+                    <th>Name</th>
+                    <th>Image</th>
+                    <th>Description</th>
+                    <th>Delete </th>
+                </thead>
+                <tbody id="card-body">
+                </tbody>
+            </table>
         </div>
     </div>
 </body>
